# NMTRN3

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  QA_CUSTOMIZE_MODEL_SCOPE.md  README.md  pyproject.toml  vercel.json
.agents/skills/retriever-finetune-recipe/: BENCHMARK.md  PITFALLS.md  SKILL.md
.claude-plugin/: marketplace.json
.claude/skills/: nemotron-retrieval-recipes
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-review.yml  fern-docs-preview-build.yml  fern-docs-preview-cleanup.yml  fern-docs-preview-close.yml  fern-docs-preview-comment.yml  fern-docs-publish.yml  team-request.yml
deploy/: README.md
deploy/nemotron-customizer/: README.md
deploy/nemotron-customizer/airgap/: .gitignore  Dockerfile  Dockerfile.dockerignore  Dockerfile.execution  Dockerfile.execution.dockerignore  Dockerfile.launcher  Dockerfile.launcher.dockerignore  README.md  SKILL.md  airgap.yaml  runner.py
docs/: application-examples.md  broken_links_false_positives.json  conf.py  deployment-guides.md  index.md
docs/_ext/: nemotron_customize.py
docs/_static/: customize.css
docs/architecture/: cli-architecture.md
docs/build-benchmarks/: getting-started.md  index.md
docs/build-benchmarks/explanation/: data-preparation.md  filtering.md  get-right-questions.md  index.md  pipeline-overview.md  quality-validation.md  question-generation.md  translation.md
docs/build-benchmarks/how-to/: custom-model-endpoints.md  domain-data.md  index.md  prepare-data.md  prompt-tuning.md  skip-stages.md
docs/build-benchmarks/reference/: benchmarks.md  generate-config.md  index.md  output-files.md  (+2 more)
docs/curate/: getting-started.md  index.md
docs/customize/: index.md
docs/fern/: docs.yml  fern.config.json
docs/model-eval/: getting-started.md  index.md  using-skills.md
docs/nemo_runspec/: nemo-run.md
docs/nemotron/: cli.md  kit.md  nvidia-stack.md
docs/sdg/: getting-started.md  index.md  planning.md  using-skills.md
docs/steps/: airgap.md  basics.md  getting-started.md  index.md
docs/train-models/: getting-started.md  index.md  using-skill.md
docs/translation/: getting-started.md  index.md  using-skills.md
scripts/: prepare_mmpr_tiny_for_vision_rl.py  prepare_public_mmpr_for_mpo.py
skills/: INDEX.md
skills/nemotron-add-model/: SKILL.md
skills/nemotron-add-pattern/: SKILL.md
skills/nemotron-add-step/: SKILL.md
skills/nemotron-customize/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/nemotron-nano3/: INDEX.md  SKILL.md  model-card.md
skills/nemotron-policy-generator/: SKILL.md  SkillsCard.md
skills/nemotron-retrieval-recipes/: BENCHMARK.md  SKILL.md  skill-card.md  skill.oms.sig
skills/nemotron-super3/: INDEX.md  SKILL.md  model-card.md
skills/nemotron-ultra/: INDEX.md  SKILL.md  model-card.md
src/nemo_runspec/: README.md  _models.py  _parser.py  _pyproject.py  data_mover.py  display.py  env.py  execution.py  help.py  pipeline.py  recipe_typer.py  run.py  squash.py
tests/data_prep/: test_binidx_stage_resume.py  test_chat_template.py  test_chat_template_reasoning.py  test_discovery.py  test_prepare_public_mmpr_for_mpo.py  test_rl_omni_ensure_raw_dir.py  test_shard_processor_partition.py  test_stage_keys.py
tests/deploy/: test_airgap_runner.py
tests/kit/: test_resolvers_pre_init.py  test_trackers.py
tests/nemo_runspec/: test_config_loader.py  test_data_mover.py  test_env.py  test_execution.py  test_execution_uv_spec.py  test_pydantic_loader.py  test_pyproject.py  test_run.py  test_squash.py
tests/recipes/: test_data_sdg_cli.py
tests/steps/: _step_helpers.py  conftest.py  test_airgap.py  test_byob_agentic_assets.py  test_cloud_backend.py  test_curator_runtime_bootstrap.py  test_index.py  test_manifests.py  test_patterns.py  test_run_cmd_runtime_preflight.py  test_slurm_backend.py  test_slurm_backend_run_command.py  test_translation_cli.py  test_translation_step.py  test_types.py
usage-cookbook/: README.md
usage-cookbook/Llama-3.1-Nemotron-Nano-8B-v1/: README.md  vllm_oke_phoenix_private_values.yaml
usage-cookbook/Nemotron-3-Nano-Omni/: sglang_cookbook.ipynb  trtllm_cookbook.ipynb  vllm_cookbook.ipynb
usage-cookbook/Nemotron-3-Super/: README.md
usage-cookbook/Nemotron-3-Ultra/: README.md  sglang_cookbook.ipynb  trtllm_cookbook.ipynb  vllm_cookbook.ipynb
usage-cookbook/Nemotron-3.5-Content-Safety/: README.md  custom_policy_cookbook.ipynb  customer_service_cookbook.ipynb  nim_cookbook.ipynb  sglang_cookbook.ipynb  trtllm_cookbook.ipynb  vllm_cookbook.ipynb
use-case-examples/: README.md
use-case-examples/Agentic-Tool-Calling-with-Nemotron-Super/: README.md  agentic_tool_calling_tutorial.ipynb
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/: .gitignore  01_synthetic_data_generation.ipynb  02_grpo_training.ipynb  03_run_agent.ipynb  README.md  install_ssm_kernels.py  pyproject.toml  tutorial_utils.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/bash_agent/: __init__.py  bash.py  commands.py  config.py  helpers.py  main_hf.py  prompts.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/resources_servers/langgraph_cli/: README.md  __init__.py  app.py  requirements.txt
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/resources_servers/langgraph_cli/configs/: langgraph_cli.yaml
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/resources_servers/langgraph_cli/data/: example.jsonl
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/resources_servers/langgraph_cli/tests/: test_app.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/tests/: test_bash_agent.py  test_install_ssm_kernels.py  test_tutorial_utils.py
use-case-examples/Build_a_Bash_Agent_with_Synthetic_Data/training/: pyproject.toml
use-case-examples/Long-Context-Document-Analysis-with-Nemotron-Super/: README.md  long_context_analysis_tutorial.ipynb
use-case-examples/Stock Analysis Agent/: README.md  app.py
use-case-examples/build-your-own-benchmark/: README.md  build_mcq_benchmark.ipynb
website/: index.html
(+1253 files in other folders)
